force-app/main/default/objects/phsUGPerformance__c/phsUGPerformance__c.object-meta.xml
<CustomObject>
    <label>phsUGPerformance</label>
    <nameField>
        <label>phsUGPerformance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>phsUGPerformance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>