force-app/main/default/objects/phsUGPerformance__c/fields/ChallengesFaced__c.field-meta.xml
<CustomField>
    <fullName>ChallengesFaced__c</fullName>
    <label>ChallengesFaced</label>
    <length>255</length>
    <type>Text</type>
</CustomField>