force-app/main/default/objects/phsUGPerformance__c/fields/FocusQuality__c.field-meta.xml
<CustomField>
    <fullName>FocusQuality__c</fullName>
    <label>FocusQuality</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>