force-app/main/default/objects/phsUGPerformance__c/fields/StressLevel__c.field-meta.xml
<CustomField>
    <fullName>StressLevel__c</fullName>
    <label>StressLevel</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>