force-app/main/default/objects/phsUGPerformance__c/fields/SuccessStories__c.field-meta.xml
<CustomField>
    <fullName>SuccessStories__c</fullName>
    <label>SuccessStories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>