force-app/main/default/objects/phsUGPerformance__c/fields/TimeInFlowState__c.field-meta.xml
<CustomField>
    <fullName>TimeInFlowState__c</fullName>
    <label>TimeInFlowState</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>