force-app/main/default/objects/phsUGPerformance__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Foreign key to Contact Object</description>
    <label>UserId</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>phsUGPerformance</relationshipLabel>
    <relationshipName>phsUGPerformance</relationshipName>
    <type>Lookup</type>
</CustomField>